# funscript-gateway

./: .gitattributes  .gitignore  README.md  RELEASE-NOTES.md  SPEC.md  pyproject.toml  s -ExecutionPolicy RemoteSigned) ; (& cUsersgoransourcefunscript-gateway.venvScriptsActivate.ps1)
.github/workflows/: release.yml
scripts/: build.py
src/funscript_gateway/: __init__.py  app_state.py  config.py  main.py  models.py
src/funscript_gateway/funscript/: __init__.py  engine.py  parser.py
src/funscript_gateway/outputs/: __init__.py  input_poller.py  manager.py  mqtt.py  tasmota.py  threshold.py  ws.py
src/funscript_gateway/player/: __init__.py  heresphere.py  manager.py  mpc_hc.py
src/funscript_gateway/ui/: axes_tab.py  input_dialogs.py  inputs_tab.py  main_window.py  output_dialog.py  outputs_tab.py  settings_tab.py  status_tab.py  tray.py
tests/: test_config.py  test_heresphere_protocol.py  test_interpolation.py  test_threshold.py
