[project]
name = "funscript-gateway"
version = "0.1.7"
description = "Bridge service connecting video players to smart home/IoT outputs via funscript axes"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "qasync>=0.27",
    "paho-mqtt>=1.6",
    "tomli_w>=1.0",
    "tomli>=2.0; python_version<'3.11'",
    "websockets>=12.0",
    "bleak>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyinstaller>=6.0",
]

[project.scripts]
funscript-gateway = "funscript_gateway.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyinstaller]
script = "scripts/build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
